some readability fixes

--- a/less/agency.less
+++ b/less/agency.less
@@ -268,21 +268,34 @@ section {
 	}
 }
 
-// Services Section
+// Science Section
 #science{
     background: url('../img/science-bg.jpg') no-repeat;
-    :before {
-        content: " ";
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        left: 0;
-    }
     background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
+    .bg-width{
+        width:100%;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .bg-opacity{
+        background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 63%); /* FF3.6+ */
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,1)), color-stop(63%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+        background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 63%); /* Chrome10+,Safari5.1+ */
+        background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 63%); /* Opera 12+ */
+        background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 63%); /* IE10+ */
+        background: radial-gradient(ellipse at center,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 63%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    }
+    .text-container{
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 3px;
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+      margin-left: 20px;
+      margin-right: 20px;
+      padding: 0 10px;
+    }
     .text-central{
         color: @blue-text;
         font-size: 1em;
@@ -617,6 +630,20 @@ section#contact {
         font-size: 16px;
         text-align: left;
         font-weight: bolder;
+    }
+    .bg-width{
+        width:100%;
+        padding-bottom: 50px;
+        padding-top: 50px;
+    }
+    .bg-opacity{
+background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 59%, rgba(0,0,0,0) 88%); /* FF3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0.65)), color-stop(59%,rgba(0,0,0,0)), color-stop(88%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 59%,rgba(0,0,0,0) 88%); /* Chrome10+,Safari5.1+ */
+background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 59%,rgba(0,0,0,0) 88%); /* Opera 12+ */
+background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 59%,rgba(0,0,0,0) 88%); /* IE10+ */
+background: radial-gradient(ellipse at center,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 59%,rgba(0,0,0,0) 88%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     }
 }
 
